# cookiecutter-flake8-plugin

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/.github/workflows/: test.yml
{{ cookiecutter.project_slug }}/tests/: test_{{cookiecutter.project_slug}}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  plugin.py
